# COMPUTER-GRAPHICS

Pract-2/: CMakeLists.txt  main.c
Pract-2/src/: display.c  display.h  main.c  mesh.c  mesh.h  triangle.h  vector.h
sld2-basic/: CMakeLists.txt
sld2-basic/src/: display.c  display.h  main.c  matrix.c  matrix.h  vector.c  vector.h
